[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/BasicBullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullets/normalbullet.png" type="Texture" id=2]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 0.5 )

[node name="BasicBullet" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 17

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.5 )
texture = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 17
collide_with_areas = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -1.3411e-07, 0 )
scale = Vector2( 0.3, 0.2 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
